feat: add semantic-release configuration for automated versioning
- Configure semantic-release with changelog generation
- Set initial version to 0.0.0 for first release
- Add GitHub workflow for automated releases
- Configure release plugins for proper versioning

This enables automated semantic versioning based on conventional commits.

--- a/pnpm-workspace.yaml
+++ b/pnpm-workspace.yaml
@@ -1,13 +1,17 @@
 packages:
   - apps/*
   - packages/*
+
 catalogs:
   prisma:
     prisma: latest
+
 onlyBuiltDependencies:
   - '@prisma/client'
   - '@prisma/engines'
+  - '@swc/core'
   - '@tailwindcss/oxide'
+  - bcrypt
   - core-js
   - esbuild
   - msw
