--- a/.github/workflows/semantic-release.yml
+++ b/.github/workflows/semantic-release.yml
@@ -49,6 +49,11 @@ jobs:
             @semantic-release/release-notes-generator \
             @semantic-release/npm
 
+      - name: Install Task
+        run: |
+          sh -c "$(curl --location https://taskfile.dev/install.sh)" -- -d -b ~/.local/bin
+          echo "$HOME/.local/bin" >> $GITHUB_PATH
+
       - name: Build CLI
         run: |
           cd apps/cli
