refactor: consolidate CI/CD workflows and improve release automation
- Consolidate multiple workflow files into unified ci.yml and release.yml
- Add .actrc configuration for local GitHub Actions testing
- Update .autorc configuration for improved release automation
- Add GoReleaser configuration for cross-platform builds
- Add plugin change detection script for optimized CI
- Update package.json and turbo.json for monorepo coordination
- Remove redundant workflow files (cli-ci, plugins-ci, sdk-ci, etc.)

--- a/.autorc
+++ b/.autorc
@@ -1,12 +1,14 @@
 {
   "plugins": [
-    "conventional-commits"
+    "conventional-commits",
+    "git-tag"
   ],
   "owner": "jameswlane",
   "repo": "devex",
   "name": "DevEx Release Bot",
   "email": "action@github.com",
   "noVersionPrefix": false,
+  "baseBranch": "main",
   "prereleaseBranches": ["beta", "alpha"],
   "labels": {
     "patch": {
@@ -16,14 +18,14 @@
       "releaseType": "patch"
     },
     "minor": {
-      "name": "minor", 
+      "name": "minor",
       "changelogTitle": "🚀 Enhancement",
       "description": "A new feature",
       "releaseType": "minor"
     },
     "major": {
       "name": "major",
-      "changelogTitle": "💥 Breaking Change", 
+      "changelogTitle": "💥 Breaking Change",
       "description": "A breaking change",
       "releaseType": "major"
     },
@@ -32,11 +34,38 @@
       "changelogTitle": "📝 Documentation",
       "description": "Documentation changes",
       "releaseType": "none"
+    },
+    "internal": {
+      "name": "internal",
+      "changelogTitle": "🏠 Internal",
+      "description": "Internal changes",
+      "releaseType": "none"
+    },
+    "ci": {
+      "name": "ci",
+      "changelogTitle": "🔧 CI",
+      "description": "CI/CD improvements",
+      "releaseType": "none"
     }
   },
   "onlyPublishWithReleaseLabel": false,
   "shipit": {
     "onlyGraduateWithReleaseLabel": false,
-    "message": "Update version to: %v [skip ci]"
+    "message": "chore: release %v [skip ci]"
+  },
+  "conventionalCommits": {
+    "releaseTypes": {
+      "feat": "minor",
+      "fix": "patch",
+      "perf": "patch",
+      "revert": "patch",
+      "docs": "none",
+      "style": "none",
+      "refactor": "patch",
+      "test": "none",
+      "build": "none",
+      "ci": "none",
+      "chore": "none"
+    }
   }
 }
