--- a/package.json
+++ b/package.json
@@ -25,6 +25,10 @@
 		"auto:version": "auto version",
 		"auto:changelog": "auto changelog",
 		"auto:release": "auto shipit",
+		"release:detect": "turbo run release:detect",
+		"release:version": "turbo run release:version",
+		"release:changelog": "turbo run release:changelog",
+		"release:build": "turbo run release:build",
 		"web:build": "turbo build --filter=@devex/web",
 		"web:dev": "turbo dev --filter=@devex/web",
 		"docs:build": "turbo build --filter=@devex/docs",
@@ -33,7 +37,8 @@
 		"prerelease": "npm run goreleaser:generate",
 		"act:lint": "actionlint .github/workflows/*.yml",
 		"act:validate": "action-validator .github/workflows/*.yml",
-		"act:test": "act --dry-run",
+		"act:test": "act push -W .github/workflows/ci.yml -n",
+		"act:test:release": "act push -W .github/workflows/release.yml -n",
 		"act:check": "npm run act:lint && npm run act:validate",
 		"docker:build": "apps/cli/scripts/docker.sh build",
 		"docker:run": "apps/cli/scripts/docker.sh run",
