fix: prevent double 'v' prefix in git tag creation
- Remove extra 'v' prefix since npm version already adds one
- Prevents malformed tags like 'vv0.1.0'
- Ensures clean version tags like 'v0.1.0'

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -207,7 +207,8 @@ jobs:
 
               echo "Creating version tag..."
               # Create git tag manually since auto version doesn't have --apply flag
-              NEXT_VERSION="v$(npm version --no-git-tag-version $VERSION)"
+              # npm version already adds 'v' prefix, so don't add another one
+              NEXT_VERSION=$(npm version --no-git-tag-version $VERSION)
               git tag "$NEXT_VERSION"
               git push origin "$NEXT_VERSION"
 
