--- a/.goreleaser.yml
+++ b/.goreleaser.yml
@@ -63,13 +63,9 @@ builds:
 before:
   hooks:
     # Create component-specific tags before GoReleaser runs
-    - cmd: 'echo "Current main tag: $(git describe --tags --exact-match HEAD 2>/dev/null || echo "No tag on HEAD")"'
+    - cmd: echo "Current main tag:"
       output: true
-    - cmd: 'if [ "$RELEASE_CLI" = "true" ]; then echo "CLI will be released"; fi'
-      output: true
-    - cmd: 'if [ "$RELEASE_SDK" = "true" ]; then echo "SDK will be released"; fi'
-      output: true
-    - cmd: 'if [ "$RELEASE_PLUGINS" = "true" ]; then echo "Plugins will be released"; fi'
+    - cmd: git describe --tags --exact-match HEAD || echo "No tag on HEAD"
       output: true
 
 # Archive configuration
