--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -134,7 +134,11 @@ jobs:
             if [[ $commit =~ ^(feat|fix|perf|revert|refactor)(\(([^)]+)\))?!?: ]]; then
               type="${BASH_REMATCH[1]}"
               component="${BASH_REMATCH[3]}"
-              is_breaking="${commit: -1}" == "!"
+              if [[ "${commit: -1}" == "!" ]]; then
+                is_breaking=true
+              else
+                is_breaking=false
+              fi
 
               echo "  Type: $type, Component: $component, Breaking: $is_breaking"
 
