fix(release): correct regex pattern syntax for bash compatibility
- Simplified regex pattern to avoid bash parsing errors
- Changed from complex optional group to cleaner syntax
- Fixed syntax error in conditional expression

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -131,7 +131,8 @@ jobs:
             echo "Analyzing: $commit"
 
             # Extract component and type from conventional commit
-            if [[ $commit =~ ^(feat|fix|perf|revert|refactor)(\(([^)]+)\))?(!)?: ]]; then
+            # Use simpler regex pattern with better bash compatibility
+            if [[ $commit =~ ^(feat|fix|perf|revert|refactor)(\(([^)]+)\))?(!)?:\ ]]; then
               type="${BASH_REMATCH[1]}"
               component="${BASH_REMATCH[3]}"
               breaking_marker="${BASH_REMATCH[4]}"
